[package]
name = "plain-aes"
version = "0.1.0"
edition = "2021"
authors = ["Mahdi Djaber <mahdios.dj@gmail.com>"]
description = "An implementation of Rijndael's cipher, commonly known as AES."
repository = "https://github.com/emdCatalyst/plain-aes"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "cryptography"]
keywords = ["aes", "rijndael", "cipher", "aes128", "aes192"]
[dependencies]
